# NetPulse

./: .gitignore  CMakeLists.txt  LINUX_BUILD.md  Makefile  README.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: http.ts  websocket.ts
frontend/src/components/: ConnectionStatus.tsx  EventLog.tsx  HealthGrade.tsx  MetricsInfo.tsx  RttChart.tsx  TargetCard.tsx
frontend/src/pages/: Dashboard.tsx  Settings.tsx
frontend/src/stores/: metricsStore.ts
frontend/src/types/: index.ts
src/: main.c
src/core/: config.c  config.h  event_log.c  event_log.h  ring_buffer.c  ring_buffer.h  scheduler.c  scheduler.h  stats.c  stats.h
src/net/: dns.c  dns.h  icmp_probe.h  icmp_probe_linux.c  icmp_probe_stub.c  tcp_probe.c  tcp_probe.h
src/platform/: fs.c  platform.h  time.c
src/server/: http_handlers.c  http_handlers.h  server.c  server.h  ws_handlers.c  ws_handlers.h
